# rag-rust

./: Cargo.toml  README.md  run.sh  run_iso.sh
src/: .embeddings.rs.swp  embeddings.rs  lib.rs  main.rs  pipeline.rs  store.rs  upload.rs  utils.rs
src/prompts/reprompt/: reprompt.txt
