[package]
name = "rag-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
qdrant-client = { git = "https://github.com/qdrant/rust-client", branch = "master" }
openai-api-rs = "4.0.4"
clap = { version = "4.1.8", features = ["derive"] }
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
anyhow = "1.0.79"
tonic = "0.10.2"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
serde = "1.0.196"
serde_json = "1.0.113"
csv = "1.3.0"
rand = "0.8.5"
rayon = "1.8.1"
actix-web = "4.5.1"

[[bin]]
name = "my_binary"
path = "src/main.rs"

[lib]
name = "rag_rs"
path = "src/lib.rs"
